# aquadoggo

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile-Release  LICENSE  README.md  RELEASE.md  aquadoggo-schemas.temp  x.toml
aquadoggo/: Cargo.toml  README.md  schema.graphql
aquadoggo/config/: default.toml
aquadoggo/migrations/: 20201229215646_create-entries.sql  20201230002752_create-logs.sql  20211127170238_instance-logs.sql  20220120142353_create-bookmarks.sql  20220424125654_create-operations.sql  20220502013246_create-documents.sql  20220509090252_create-operations.sql  20220510022755_create-documents.sql  20220519034853_create-schema.sql  20220617115933_create-tasks.sql  20230114140233_alter-documents.sql  20230420121200_alter-operation-fields.sql  20230523135826_alter-operations.sql  20230811201924_purge-document-trigger.sql
aquadoggo/proptest-regressions/: proptests.txt
aquadoggo/proptest-regressions/proptests/: filtering.txt
aquadoggo/src/: Test.js  bus.rs  config.rs  context.rs  domain.rs  e2e_tests.rs  errors.rs  graphql.rs  lib.rs  manager.rs  materialisation.rs  node.rs  proptests.rs  runtime.rs  server.rs  service_manager.rs  service_message.rs  shutdown.rs  task.rs  test_helpers.rs  tests.rs  validation.rs  worker.rs
aquadoggo/src/api/: api.rs  config_file.rs  lock_file.rs  migration.rs  mod.rs
aquadoggo/src/db/: conversions.rs  db_types.rs  errors.rs  mod.rs  provider.rs  request.rs  sql_storage.rs  sql_store.rs  store.rs  traits.rs  utils.rs
aquadoggo/src/db/models/: document.rs  document_view.rs  entry.rs  log.rs  mod.rs  operation.rs  query.rs  relation.rs  schema.rs  task.rs  utils.rs
aquadoggo/src/db/query/: errors.rs  field.rs  filter.rs  helpers.rs  mod.rs  order.rs  pagination.rs  select.rs  test_utils.rs  validate.rs
aquadoggo/src/db/store/: document.rs  document_view.rs  entry.rs  log.rs  mod.rs  operation.rs  test_utils.rs
aquadoggo/src/db/stores/: blob.rs  document.rs  entry.rs  log.rs  mod.rs  operation.rs  query.rs  schema.rs  task.rs  test_utils.rs
aquadoggo/src/db/traits/: document.rs  mod.rs  operation.rs  schema.rs
aquadoggo/src/db/types/: document.rs  entry.rs  mod.rs  operation.rs
aquadoggo/src/dynamic_graphql/: mod.rs  schema.rs  utils.rs
aquadoggo/src/dynamic_graphql/mutations/: mod.rs  publish.rs
aquadoggo/src/dynamic_graphql/queries/: mod.rs  next_args.rs
aquadoggo/src/dynamic_graphql/scalars/: document_view_id_scalar.rs  encoded_entry_scalar.rs  encoded_operation_scalar.rs  entry_hash_scalar.rs  mod.rs
aquadoggo/src/dynamic_graphql/schema_builders/: document.rs  document_field.rs  next_args.rs
aquadoggo/src/dynamic_graphql/types/: document_meta.rs  mod.rs  next_arguments.rs
aquadoggo/src/graphql/: Untitled-1.rs  api.rs  constants.rs  consts.rs  context.rs  error.rs  mod.rs  pagination.rs  query.rs  resolvers.rs  schema.rs  sql.rs  temp_file.rs  tests.rs  utils.rs
aquadoggo/src/graphql/client/: dynamic_object.rs  dynamic_query.rs  mod.rs  mutation.rs  mutations.rs  query.rs  request.rs  response.rs  root.rs  static_query.rs  tests.rs  types.rs  u64_string.rs  utils.rs
aquadoggo/src/graphql/convert/: mod.rs  query.rs  schema.rs  sql.rs
aquadoggo/src/graphql/input_values/: fields.rs  fields_filter.rs  meta_filter.rs  mod.rs  order.rs
aquadoggo/src/graphql/mutations/: document.rs  mod.rs  publish.rs
aquadoggo/src/graphql/objects/: document.rs  document_collection.rs  document_fields.rs  document_meta.rs  mod.rs
aquadoggo/src/graphql/ping/: mod.rs
aquadoggo/src/graphql/queries/: all_documents.rs  collection.rs  document.rs  mod.rs  next_args.rs
aquadoggo/src/graphql/replication/: aliased_author.rs  author.rs  bamboo_entry.rs  client.rs  context.rs  entry.rs  entry_and_payload.rs  entry_hash.rs  log_id.rs  mod.rs  payload.rs  public_key.rs  query.rs  response.rs  schema.rs  sequence_number.rs  single_entry_and_payload.rs
aquadoggo/src/graphql/responses/: next_arguments.rs
aquadoggo/src/graphql/scalars/: cursor_scalar.rs  document_id.rs  document_id_scalar.rs  document_view_id.rs  document_view_id_scalar.rs  entry_hash.rs  (+16 more)
aquadoggo/src/http/: api.rs  context.rs  mod.rs  service.rs
aquadoggo/src/libp2p/: config.rs  identity.rs  mod.rs  service.rs
aquadoggo/src/materializer/: input.rs  mod.rs  service.rs  worker.rs
aquadoggo/src/network/: behaviour.rs  config.rs  identity.rs  mod.rs  relay.rs  replication.rs  service.rs  shutdown.rs  swarm.rs  transport.rs  utils.rs
aquadoggo/src/proptests/: document_strategies.rs  filter_strategies.rs  filtering.rs  mod.rs  pagination.rs  schema_strategies.rs  tests.regressions  tests.rs  utils.rs
aquadoggo/src/replication/: announcement.rs  config.rs  errors.rs  ingest.rs  manager.rs  message.rs  mod.rs  mode.rs  replicate_authors.rs  replicate_schemas.rs  schema_id_set.rs  service.rs  session.rs  strategies.rs  target_set.rs  traits.rs
aquadoggo/src/rpc/: api.rs  backend.rs  mod.rs  request.rs  response.rs  server.rs
aquadoggo/src/schema/: errors.rs  mod.rs  provider.rs  schema_provider.rs  service.rs  static_provider.rs  static_schema_provider.rs  temp_file.rs
aquadoggo/src/schema_service/: mod.rs  schema_service.rs  temp_file.rs
aquadoggo/src/test_utils/: client.rs  config.rs  db.rs  helpers.rs  mod.rs  node.rs  runner.rs
aquadoggo/src/types/: entry_hash.rs  seq_num.rs
aquadoggo_cli/: Cargo.toml  README.md  XXX  config.toml  example_config.toml
aquadoggo_cli/src/: config.rs  key_pair.rs  main.rs  schemas.rs  utils.rs
core/: Cargo.toml
core/src/: config.rs  lib.rs  task.rs
db/: Cargo.toml
db/src/: utils.rs
node/: Cargo.toml  README.md
node/migrations/: 20201229215646_create-entries.sql  20201230002752_create-logs.sql
node/src/: config.rs  errors.rs  lib.rs  main.rs  runtime.rs  task.rs  test_helpers.rs
node/src/db/: mod.rs
node/src/rpc/: api.rs  mod.rs  server.rs
node/src/types/: author.rs  encoded_entry.rs  encoded_message.rs  entry_hash.rs  log_id.rs  mod.rs  schema.rs  seq_num.rs
node_cli/: Cargo.toml  README.md
node_cli/src/: main.rs
rpc/: Cargo.toml
rpc/src/: api.rs  lib.rs  server.rs
(+123 files in other folders)
