[package]
name = "aquadoggo"
version = "0.4.0"
authors = [
    "adz <x1d@adz.garden>",
    "cafca <cafca@001.land>",
    "glyph <glyph@mycelial.technology>",
    "pietgeursen <pietgeursen@gmail.com>",
    "sandreae <contact@samandreae.com>",
    "sophiiistika <sophiiistika@mailbox.org>",
]
description = "Embeddable p2p network node"
license = "AGPL-3.0-or-later"
repository = "https://github.com/p2panda/aquadoggo"
readme = "README.md"
edition = "2018"

[dependencies]
anyhow = "1.0.62"
async-graphql = { version = "5.0.6", features = ["dynamic-schema"] }
async-graphql-axum = "5.0.6"
async-trait = "0.1.64"
asynchronous-codec = { git = "https://github.com/p2panda/asynchronous-codec", rev = "6eef38b30ade6ce2d66accc966652bd15d74e274", features = ["cbor"] }
axum = "0.6.10"
bamboo-rs-core-ed25519-yasmf = "0.1.1"
bs58 = "0.4.0"
deadqueue = { version = "0.2.3", default-features = false, features = [
    "unlimited",
] }
directories = "4.0.1"
dynamic-graphql = "0.7.3"
envy = "0.4.2"
exponential-backoff = "1.2.0"
futures = "0.3.23"
hex = "0.4.3"
http = "0.2.9"
libp2p = { version = "0.52.0", features = [
    "autonat",
    "identify",
    "macros",
    "mdns",
    "noise",
    "ping",
    "relay",
    "rendezvous",
    "serde",
    "tokio",
    "yamux",
] }
libp2p-quic = { version = "0.8.0-alpha", features = ["tokio"] }
lipmaa-link = "0.2.2"
log = "0.4.19"
once_cell = "1.18.0"
openssl-probe = "0.1.5"
p2panda-rs = { git = "https://github.com/p2panda/p2panda", rev = "a535ee229b367c79f18a50626c6bcab61581e32b", features = [
    "storage-provider",
] }
serde = { version = "1.0.152", features = ["derive"] }
sqlx = { version = "0.6.1", features = [
    "any",
    "postgres",
    "sqlite",
    "runtime-tokio-rustls",
] }
thiserror = "1.0.39"
tokio = { version = "1.28.2", features = [
    "macros",
    "net",
    "rt",
    "rt-multi-thread",
    "sync",
    "time",
] }
tokio-stream = { version = "0.1.14", features = ["sync"] }
tower-http = { version = "0.3.4", default-features = false, features = [
    "cors",
] }
triggered = "0.1.2"
void = "1.0.2"

[dev-dependencies]
ciborium = "0.2.0"
ctor = "0.1.23"
env_logger = "0.9.0"
http = "0.2.9"
hyper = "0.14.19"
libp2p-swarm-test = "0.2.0"
once_cell = "1.17.0"
p2panda-rs = { git = "https://github.com/p2panda/p2panda", rev = "a535ee229b367c79f18a50626c6bcab61581e32b", features = [
    "test-utils",
    "storage-provider",
] }
rand = "0.8.5"
reqwest = { version = "0.11.11", default-features = false, features = [
    "json",
    "stream",
] }
rstest = "0.15.0"
rstest_reuse = "0.3.0"
serde_json = "1.0.85"
tower = "0.4.13"
tower-service = "0.3.2"
