[package]
name = "aquadoggo"
version = "0.7.1"
authors = [
    "adz <x1d@adz.garden>",
    "cafca <cafca@001.land>",
    "glyph <glyph@mycelial.technology>",
    "pietgeursen <pietgeursen@gmail.com>",
    "sandreae <contact@samandreae.com>",
    "sophiiistika <sophiiistika@mailbox.org>",
]
description = "Embeddable p2p network node"
license = "AGPL-3.0-or-later"
repository = "https://github.com/p2panda/aquadoggo"
readme = "README.md"
edition = "2018"

[features]
proptests = []

[dependencies]
anyhow = "1.0.62"
async-graphql = { version = "5.0.6", features = ["dynamic-schema"] }
async-graphql-axum = "5.0.6"
async-stream = "0.3.5"
async-trait = "0.1.64"
asynchronous-codec = { version = "0.7.0", features = ["cbor"] }
axum = { version = "0.6.10", features = ["headers"] }
bamboo-rs-core-ed25519-yasmf = "0.1.1"
bs58 = "0.4.0"
bytes = "1.4.0"
deadqueue = { version = "0.2.3", default-features = false, features = [
    "unlimited",
] }
dynamic-graphql = "0.7.3"
futures = "0.3.23"
hex = "0.4.3"
http = "0.2.9"
libp2p = { version = "0.52.4", features = [
    "dcutr",
    "identify",
    "macros",
    "mdns",
    "noise",
    "relay",
    "rendezvous",
    "serde",
    "tokio",
    "yamux",
    "tcp",
    "quic",
] }
libp2p-allow-block-list = "0.2.0"
lipmaa-link = "0.2.2"
log = "0.4.19"
once_cell = "1.18.0"
openssl-probe = "0.1.5"
p2panda-rs = { version = "0.8.1", features = ["storage-provider"] }
rand = "0.8.5"
regex = "1.9.3"
serde = { version = "1.0.152", features = ["derive"] }
serde_bytes = "0.11.12"
sqlx = { version = "0.6.1", features = [
    "any",
    "postgres",
    "sqlite",
    "runtime-tokio-rustls",
] }
tempfile = "3.7.0"
thiserror = "1.0.39"
tokio = { version = "1.28.2", features = [
    "macros",
    "net",
    "rt-multi-thread",
    "sync",
    "time",
    "fs",
] }
tokio-stream = { version = "0.1.14", features = ["sync"] }
tokio-util = { version = "0.7.8", features = ["io"] }
tower-http = { version = "0.4.0", default-features = false, features = [
    "cors",
] }
triggered = "0.1.2"
void = "1.0.2"

[dev-dependencies]
async-recursion = "1.0.4"
ciborium = "0.2.0"
ctor = "0.1.23"
env_logger = "0.9.0"
envy = "0.4.2"
http = "0.2.9"
hyper = "0.14.19"
libp2p-swarm-test = "0.2.0"
once_cell = "1.17.0"
p2panda-rs = { version = "0.8.1", features = [
    "test-utils",
    "storage-provider",
] }
proptest = "1.2.0"
proptest-derive = "0.4.0"
reqwest = { version = "0.11.11", default-features = false, features = [
    "json",
    "stream",
] }
rstest = "0.15.0"
rstest_reuse = "0.3.0"
serde_bytes = "0.11.12"
serde_json = "1.0.85"
tempfile = "3.7.0"
tower = "0.4.13"
tower-service = "0.3.2"
