[package]
name = "aquadoggo_cli"
version = "0.5.0"
authors = [
    "adz <x12@adz.garden>",
    "cafca <cafca@001.land>",
    "pietgeursen <pietgeursen@gmail.com>",
    "sandreae <contact@samandreae.com>",
    "sophiiistika <sophiiistika@mailbox.org>",
    "glyph <glyph@mycelial.technology>",
]
license = "AGPL-3.0-or-later"
repository = "https://github.com/p2panda/aquadoggo"
readme = "README.md"
edition = "2018"

[[bin]]
name = "aquadoggo"
path = "src/main.rs"
doc = false

[dependencies]
anyhow = "1.0.62"
clap = { version = "4.1.8", features = ["derive", "cargo"] }
colored = "2.0.4"
directories = "5.0.1"
env_logger = "0.9.0"
figment = { version = "0.10.10", features = ["toml", "env"] }
hex = "0.4.3"
libp2p = "0.52.0"
log = "0.4.20"
p2panda-rs = { git = "https://github.com/p2panda/p2panda", rev = "c0b382c9b31425748bba7c150ec9ad7a784d000c" }
path-clean = "1.0.1"
serde = { version = "1.0.185", features = ["serde_derive"] }
tempfile = "3.7.0"
tokio = { version = "1.28.2", features = ["full"] }
toml = "0.7.6"

[dependencies.aquadoggo]
version = "~0.5.0"
path = "../aquadoggo"
