[package]
name = "p2panda-core"
version = "0.1.0"
authors = ["Andreas Dzialocha <x1d@adz.garden>"]
edition = "2018"

[dependencies]
async-std = { version = "1.7.0", features = ["unstable", "attributes"] }
config = "0.10.1"
directories = "3.0.1"
exit-future = "0.2.0"
futures = "0.3.8"
log = "0.4.11"
serde = { version = "1.0.117", features = ["derive"] }
