[package]
authors = ["Andreas Dzialocha <x1d@adz.garden>"]
edition = "2018"
name = "p2panda-db"
version = "0.1.0"

[dependencies]
anyhow = "1.0.35"
async-std = {version = "1.7.0", features = ["unstable", "attributes"]}
sqlformat = "=0.1.4"
sqlx = {version = "0.4.1", features = ["runtime-async-std-native-tls", "any", "sqlite", "mysql", "postgres"]}
