[package]
name = "p2panda_node"
version = "0.1.0"
authors = ["sophiiistika <sophiiistika@mailbox.org>", "adz <x1d@adz.garden>", "cafca <cafca@001.land>"]
license = "AGPL-3.0-only"
repository = "https://github.com/p2panda/node"
readme = "README.md"
edition = "2018"

[dependencies]
anyhow = "1.0.35"
async-std = { version = "1.7.0", features = ["unstable", "attributes"] }
bamboo-core = { git = "https://github.com/pietgeursen/bamboo-rs", tag = "v0.1.0-pre-26" }
directories = "3.0.1"
ed25519-dalek = "1.0.1"
envy = "0.4.1"
exit-future = "0.2.0"
futures = "0.3.8"
hex = "0.4.2"
jsonrpc-core = "16.0.0"
jsonrpc-derive = "16.0.0"
jsonrpc-http-server = "16.0.0"
jsonrpc-ws-server = "16.0.0"
log = "0.4.11"
serde = { version = "1.0.117", features = ["derive"] }
sqlformat = "=0.1.4"
sqlx = { version = "0.4.2", features = ["runtime-async-std-native-tls", "any", "sqlite", "mysql", "postgres"] }
thiserror = "1.0.23"
