[package]
authors = ["Andreas Dzialocha <x1d@adz.garden>"]
edition = "2018"
name = "p2panda-rpc"
version = "0.1.0"

[dependencies]
jsonrpc-core = "15.1.0"
jsonrpc-derive = "15.1.0"
jsonrpc-http-server = "15.1.0"
jsonrpc-ws-server = "15.1.0"
log = "0.4.11"
p2panda-core = {path = "../core"}
serde = {version = "1.0.118", features = ["derive"]}
serde_json = "1.0.60"
